...
          padding: const EdgeInsets.symmetric(horizontal: 16),
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              TextFormField(
                controller: _emailController,
                key: const ValueKey('email_id'),
                decoration: const InputDecoration(hintText: 'Enter Email Id'),
                validator: (value) => Validator.validateEmail(value ?? " "),
              ),
              TextFormField(
                controller: _passwordController,
                key: const ValueKey('password'),
                decoration:
                    const InputDecoration(hintText: 'Enter your password'),
                validator: (value) => Validator.validatePassword(value ?? " "),
              ),
              const SizedBox(height: 16),
              ElevatedButton(
...
